[package]
name = "justlogfox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["colors"]
colors = ["dep:owo-colors"]

[dependencies]
chrono = "0.4"
owo-colors = { version = "3", optional = true }